k8s/mtail.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mtail
spec:
  rules:
  - host: mtail.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mtail
          servicePort: 3903
---
apiVersion: v1
kind: Service
metadata:
  name: mtail
  labels:
    app: mtail
spec:
  type: ClusterIP
  ports:
  - port: 3903
    targetPort: 3903
  selector:
    app: mtail
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prom
spec:
  rules:
  - host: prom.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prom
          servicePort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prom
  labels:
    app: mtail
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: mtail
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mtail
  template:
    metadata:
      name: mtail
      labels:
        app: mtail
    spec:
      containers:
      - name: crond
        image: whitestar/crond:latest
        volumeMounts:
        - name: test-vol
          mountPath: /etc/cron.d/test
          subPath: test
        - name: log-vol
          mountPath: /tmp/log
      - name: tail
        image: debian:stable-slim
        command:
        - tail
        args:
        - -F
        - /tmp/log/test.log
        volumeMounts:
        - name: log-vol
          mountPath: /tmp/log
      - name: mtail
        image: whitestar/mtail:latest
        ports:
        - containerPort: 3903
        args:
        - --progs
        - /etc/mtail
        - --logs
        - /tmp/mtail.INFO,/tmp/mtail.WARNING,/tmp/log/test.log
        volumeMounts:
        - name: log-vol
          mountPath: /tmp/log
        - name: mtail-vol
          mountPath: /etc/mtail
      - name: prom
        image: prom/prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prom-vol
          mountPath: /etc/prometheus
      volumes:
      - name: log-vol
        emptyDir: {}
      - name: test-vol
        configMap:
          name: mtail
          items:
          - key: test
            path: test
      - name: mtail-vol
        configMap:
          name: mtail
          items:
          - key: test.mtail
            path: test.mtail
      - name: prom-vol
        configMap:
          name: mtail
          items:
          - key: prometheus.yml
            path: prometheus.yml
